# lxd-snapper

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  readme.md  release  release.sh  rust-toolchain  rustfmt.toml  shell.nix  test  test.nix  tests.nix
docs/example-configs/: basic-last.yaml  basic-monthly.yaml  basic-yearly.yaml  cascading.yaml  custom-snapshot-prefix.yaml  different-priorities.yaml
docs/examples/: keep-last-one.yaml  many-policies.yaml
libs/lxd/: Cargo.toml
libs/lxd/src/: clients.rs  error.rs  lib.rs  models.rs  result.rs  test_utils.rs
libs/lxd/src/clients/: dummy.rs  fake.rs  process.rs
libs/lxd/src/models/: container.rs  container_name.rs  container_status.rs  instance.rs  instance_name.rs  instance_status.rs  project.rs  project_name.rs  serde.rs  snapshot.rs  snapshot_name.rs
nix/lxd/: alpine-meta.tar.xz  config.yaml
nix/lxd-snapper/: config.yaml
src/: cmds.rs  commands.rs  config.rs  environment.rs  lxd.rs  main.rs  testing.rs  utils.rs
src/cmds/: backup.rs  backup_and_prune.rs  debug_nuke.rs  nuke.rs  prune.rs  query_instances.rs  validate.rs
src/cmds/backup/: summary.rs
src/cmds/prune/: find_snapshots.rs  find_snapshots_to_keep.rs  summary.rs
src/cmds/validate/tests/missing_lxc_path/: config.yaml
src/commands/: backup.rs  backup_and_prune.rs  debug_list_instances.rs  debug_nuke.rs  prune.rs  validate.rs
src/commands/backup/: summary.rs
src/commands/prune/: find_snapshots.rs  find_snapshots_to_keep.rs  summary.rs
src/commands/validate/tests/missing_lxc_path/: config.yaml
src/config/: hooks.rs  policies.rs  policy.rs  remote.rs  remotes.rs
src/lib_command/: Cargo.toml  commands.rs  error.rs  lib.rs
src/lib_command/commands/: backup.rs  nuke.rs  prune.rs
src/lib_config/: Cargo.toml  config.rs  error.rs  lib.rs  policy.rs  result.rs
src/lib_driver/: Cargo.toml  bootstrap.rs  cli.yml  error.rs  input.rs  lib.rs
src/lib_driver/bootstrap/: boot_config.rs  boot_lxd.rs
src/lib_driver/input/: error.rs
src/lib_lxd/: Cargo.toml  client.rs  clients.rs  error.rs  lib.rs  models.rs
src/lib_lxd/clients/: in_memory.rs  process.rs
src/lib_lxd/models/: container.rs  container_name.rs  container_status.rs  snapshot.rs  snapshot_name.rs
src/lxd/: clients.rs  error.rs  models.rs
src/lxd/clients/: fake.rs  process.rs
src/lxd/clients/process/tests/: lxd-non-zero-exit-code.sh  lxd-timeout.sh
src/lxd/models/: instance.rs  instance_name.rs  instance_status.rs  project.rs  project_name.rs  remote_name.rs  serde.rs  snapshot.rs  snapshot_name.rs
src/utils/: pretty_lxd_instance_name.rs  summary.rs
tests/: README.md  default.nix  prelude.py.nix
tests/backup-and-prune/: config.yaml  expected.out.1.txt  test.nix  test.py
tests/backup-and-prune-with-projects/: config.yaml  test.py
tests/backup-and-prune-with-remotes/: config.yaml  expected.out.1.txt  expected.out.2.txt  test.nix  test.py
tests/cases/: common.nix  common.py
tests/cases/backup-and-prune/: config.yaml  test.py
tests/cases/backup-and-prune-with-projects/: test.py
tests/cases/backup-and-prune-with-remotes/: config.yaml
tests/cases/backup-prune/: test.py
tests/cases/dry-run/: test.py
tests/cases/hooks/: config.yaml  expected.log.txt  expected.out.1.txt  expected.out.2.txt  expected.out.3.txt  expected.out.4.txt  test.py
tests/dry-run/: expected.out.1.txt  expected.out.3.txt  test.py
tests/fixtures/: lxd-alpine-rootfs.tar.xz
tests/hooks/: config.yaml  expected.log.txt  expected.out.2.txt  test.py
tests/timeout/: config.yaml  expected.out.txt  test.py
