[package]
name = "lxd-snapper"
version = "1.2.0"
license = "MIT"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
edition = "2021"

[workspace]
members = [
    "libs/lxd",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
colored = "2.0"
indexmap = { version = "1.9", features = ["serde-1"] }
prettytable-rs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

lib_lxd = { path = "libs/lxd" }

[dev-dependencies]
glob = "0.3"
indoc = "1.0"
pretty_assertions = "1.0"
