[package]
name = "lxd-snapper"
version = "1.3.1"
license = "MIT"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
humantime = "2.1"
indexmap = { version = "1.9", features = ["serde-1"] }
itertools = "0.10"
pathsearch = "0.2"
prettytable-rs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.3"
serde_yaml = "0.9"
thiserror = "1.0"
wait-timeout = "0.2"

[dev-dependencies]
ansi-parser = "0.8"
glob = "0.3"
indoc = "1.0"
pretty_assertions = "1.3"
test-case = "2.0"
