[package]
name = "lib_lxd"
version = "0.0.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pathsearch = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"
