[package]
name = "lib_command"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4.7"
colored = "1.8.0"
indexmap = "1.0.2"
lib_config = { path = "../lib_config" }
lib_lxd = { path = "../lib_lxd" }
