[package]
name = "lib_config"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
indexmap = { version = "1.0.2", features = ["serde-1"] }
lib_lxd = { path = "../lib_lxd" }
serde = { version = "1.0.97", features = ["derive"] }
serde_yaml = "0.8.9"
