[package]
name = "lib_driver"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
colored = "1.8.0"
lib_command = { path = "../lib_command" }
lib_config = { path = "../lib_config" }
lib_lxd = { path = "../lib_lxd" }
