[package]
name = "lib_lxd"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
